import { Entities, MonomerOrAmbiguousType } from 'ketcher-core';
import { act, fireEvent, render, screen, within } from '@testing-library/react';
import { Provider as StoreProvider } from 'react-redux';
import { ThemeProvider } from '@emotion/react';
import { createTheme } from '@mui/material/styles';
import { merge } from 'lodash';
import { RnaEditorExpanded } from 'components/monomerLibrary/RnaBuilder/RnaEditor/RnaEditorExpanded/RnaEditorExpanded';
import { EmptyFunction } from 'helpers';
import { configureAppStore } from 'state';
import {
  setActiveRnaBuilderItem,
  setActivePresetMonomerGroup,
} from 'state/rna-builder';
import { MonomerGroups } from 'src/constants';
import { defaultTheme } from 'theming/defaultTheme';

const testTheme = merge(createTheme(), { ketcher: defaultTheme });

const useLayoutModeMock = jest.fn(() => 'sequence-layout-mode');
const useIsCompactViewMock = jest.fn(() => true);
const mockEditorEvents = {
  keyDown: { add: () => true, remove: () => true },
  cancelSequenceEditInRNABuilderMode: { add: () => true, remove: () => true },
};

jest.mock('hooks', () => ({
  ...jest.requireActual('hooks'),
  useLayoutMode: () => useLayoutModeMock(),
  useIsCompactView: () => useIsCompactViewMock(),
}));

describe('Test Rna Editor Expanded component', () => {
  afterEach(() => {
    useIsCompactViewMock.mockReturnValue(true);
  });

  it('should render correctly in edit mode', async () => {
    render(
      withThemeAndStoreProvider(
        <RnaEditorExpanded isEditMode onDuplicate={EmptyFunction} />,
        {
          rnaBuilder: {
            activePreset: {
              name: '',
              nameInList: '',
              sugar: undefined,
              phosphate: undefined,
              base: undefined,
            },
          },
        },
      ),
    );

    const rnaEditorExpanded = screen.getByTestId('rna-editor-expanded');
    const cancelBtn = screen.getByTestId('cancel-btn');
    const addToPresetsBtn = screen.getByTestId('add-to-presets-btn');

    fireEvent.click(addToPresetsBtn);
    fireEvent.click(cancelBtn);

    expect(rnaEditorExpanded).toMatchSnapshot();
  });

  it('should render correctly in edit mode with modification of sequence', async () => {
    render(
      withThemeAndStoreProvider(
        <RnaEditorExpanded isEditMode onDuplicate={EmptyFunction} />,
        {
          editor: {
            editor: {
              isSequenceEditInRNABuilderMode: true,
              events: mockEditorEvents,
            },
          },
          rnaBuilder: {
            activePreset: {},
            sequenceSelectionName: '2 nucleotides',
            sequenceSelection: [
              {
                type: Entities.Nucleotide,
                baseLabel: 'A',
                sugarLabel: 'R',
                phosphateLabel: 'P',
                nodeIndexOverall: 0,
                hasR1Connection: false,
              },
              {
                type: Entities.Nucleotide,
                baseLabel: 'C',
                sugarLabel: 'R',
                phosphateLabel: 'P',
                nodeIndexOverall: 1,
                hasR1Connection: true,
              },
            ],
            presetsDefault: [],
            presetsCustom: [],
          },
        },
      ),
    );

    const rnaEditorExpanded = screen.getByTestId('rna-editor-expanded');

    // In sequence edit mode the phosphate position picker is shown but disabled
    // (req 5.2 of #9120).
    expect(
      screen.getByRole('button', { name: 'Select phosphate position' }),
    ).toBeDisabled();
    expect(rnaEditorExpanded).toMatchSnapshot();
  });

  it('should render correctly in view mode', async () => {
    const onDuplicateHandler = jest.fn();

    render(
      withThemeAndStoreProvider(
        <RnaEditorExpanded
          isEditMode={false}
          onDuplicate={onDuplicateHandler}
        />,
        {
          rnaBuilder: {
            activePreset: {
              name: 'MyRna',
              sugar: {
                props: {
                  MonomerName: '',
                },
              },
              phosphate: {
                props: {
                  MonomerName: '',
                },
              },
              base: {
                props: {
                  MonomerName: '',
                },
              },
              nameInList: 'MyRna',
            },
            presetsDefault: [],
            presetsCustom: [],
          },
        },
      ),
    );

    const rnaEditorExpanded = screen.getByTestId('rna-editor-expanded');
    const editBtn = screen.getByTestId('edit-btn');
    const duplicateBtn = screen.getByTestId('duplicate-btn');

    fireEvent.click(editBtn);
    fireEvent.click(duplicateBtn);

    expect(onDuplicateHandler).toHaveBeenCalled();
    expect(rnaEditorExpanded).toMatchSnapshot();
  });

  it('shows "Not selected" for an empty phosphate slot in sequence edit mode', () => {
    useIsCompactViewMock.mockReturnValue(false);

    render(
      withThemeAndStoreProvider(
        <RnaEditorExpanded isEditMode onDuplicate={EmptyFunction} />,
        {
          editor: {
            editor: {
              isSequenceEditInRNABuilderMode: true,
              events: mockEditorEvents,
            },
          },
          rnaBuilder: {
            activePreset: {},
            sequenceSelectionName: '1 nucleoside',
            sequenceSelection: [
              {
                type: Entities.Nucleoside,
                sugarLabel: 'R',
                baseLabel: 'A',
                nodeIndexOverall: 0,
                hasR1Connection: false,
                hasAntisense: false,
                isNucleosideConnectedAndSelectedWithPhosphate: false,
              },
            ],
            presetsDefault: [],
            presetsCustom: [],
          },
        },
      ),
    );

    expect(
      within(screen.getByTestId('rna-builder-slot--phosphate')).getByText(
        'Not selected',
      ),
    ).toBeInTheDocument();
  });

  it('should not enable the Update button when re-entering edit mode without picking a new monomer', async () => {
    const sequenceSelection = [
      {
        type: Entities.Nucleotide,
        baseLabel: 'A',
        sugarLabel: 'R',
        phosphateLabel: 'P',
        nodeIndexOverall: 0,
        hasR1Connection: false,
      },
    ];
    const monomerA = { label: 'A' } as MonomerOrAmbiguousType;
    const monomerB = { label: 'B' } as MonomerOrAmbiguousType;

    const store = configureAppStore({
      editor: {
        editor: {
          isSequenceEditInRNABuilderMode: true,
          events: mockEditorEvents,
        },
      },
      rnaBuilder: {
        activePreset: {},
        sequenceSelectionName: '1 nucleotide',
        sequenceSelection,
        presetsDefault: [],
        presetsCustom: [],
        activeRnaBuilderItem: MonomerGroups.BASES,
        activePresetMonomerGroup: {
          groupName: MonomerGroups.BASES,
          groupItem: monomerA,
        },
      },
    });

    const tree = (isEditMode: boolean) => (
      <ThemeProvider theme={testTheme}>
        <StoreProvider store={store}>
          <RnaEditorExpanded
            isEditMode={isEditMode}
            onDuplicate={EmptyFunction}
          />
        </StoreProvider>
      </ThemeProvider>
    );

    const { rerender } = render(tree(true));

    // No monomer picked yet in this edit session: Update stays disabled.
    expect(screen.getByTestId('save-btn')).toBeDisabled();

    // User picks a monomer: Update becomes enabled.
    act(() => {
      store.dispatch(
        setActivePresetMonomerGroup({
          groupName: MonomerGroups.BASES,
          groupItem: monomerB,
        }),
      );
    });
    rerender(tree(true));
    expect(screen.getByTestId('save-btn')).not.toBeDisabled();

    // User cancels (edit mode turns off) without the stale redux monomer
    // group being reset, then re-enters edit mode on a fresh selection.
    rerender(tree(false));
    act(() => {
      store.dispatch(setActiveRnaBuilderItem(MonomerGroups.BASES));
    });
    rerender(tree(true));

    // Re-entering edit mode must start a fresh session: Update stays
    // disabled until a monomer is actually picked again.
    expect(screen.getByTestId('save-btn')).toBeDisabled();
  });

  it('merges a picked monomer into the preset name in preset edit mode', () => {
    const sugar = { label: 'R' } as MonomerOrAmbiguousType;

    const store = configureAppStore({
      rnaBuilder: {
        activePreset: {},
        presetsDefault: [],
        presetsCustom: [],
        activeRnaBuilderItem: MonomerGroups.SUGARS,
      },
    });

    const tree = (
      <ThemeProvider theme={testTheme}>
        <StoreProvider store={store}>
          <RnaEditorExpanded isEditMode onDuplicate={EmptyFunction} />
        </StoreProvider>
      </ThemeProvider>
    );

    const { rerender } = render(tree);

    const nameInput = screen.getByTestId(
      'name-your-structure-editbox',
    ) as HTMLInputElement;
    // No monomer picked yet: the preset name is still empty.
    expect(nameInput.value).toBe('');

    // Picking a sugar in preset edit mode must fold it into the local preset
    // copy and recompute the full name during render (previously done via an
    // effect reacting to the redux monomer selection).
    act(() => {
      store.dispatch(
        setActivePresetMonomerGroup({
          groupName: MonomerGroups.SUGARS,
          groupItem: sugar,
        }),
      );
    });
    rerender(tree);

    expect(
      (screen.getByTestId('name-your-structure-editbox') as HTMLInputElement)
        .value,
    ).toBe('R');
  });
});
