// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Rna Editor Expanded component > should render correctly in edit mode 1`] = `
<div
  class="css-1sdi5u4-RnaEditorExpandedContainer ep48xt70"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-lp1h1l-CompactViewName ep48xt71"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value=""
  />
  <div
    class="css-8bc8yr-GroupsContainer ep48xt72"
  >
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="sugar"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="base"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Base
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="phosphate"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Phosphate
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-14xjga1-ButtonsContainer ep48xt77"
  >
    <button
      class="css-45wob6-StyledButton ep48xt78"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-155nhcg-StyledButton ep48xt78"
      data-mui-internal-clone-element="true"
      data-testid="add-to-presets-btn"
      disabled=""
      type="button"
    >
      Add to Presets
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component > should render correctly in edit mode with modification of sequence 1`] = `
<div
  class="rna-editor-expanded--sequence-edit-mode css-1sdi5u4-RnaEditorExpandedContainer ep48xt70"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-lp1h1l-CompactViewName ep48xt71"
    data-testid="name-your-structure-editbox"
    disabled=""
    placeholder="Name your structure"
    value="2 nucleotides"
  />
  <div
    class="css-8bc8yr-GroupsContainer ep48xt72"
  >
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-1ufngfc-GroupIcon e1jvndxx5"
          name="sugar"
        />
      </div>
      <p
        class="css-v3da1w-CompactGroupText e1jvndxx8"
      >
        R
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-1ufngfc-GroupIcon e1jvndxx5"
          name="base"
        />
      </div>
      <p
        class="css-v3da1w-CompactGroupText e1jvndxx8"
      >
        [multiple]
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-1ufngfc-GroupIcon e1jvndxx5"
          name="phosphate"
        />
      </div>
      <p
        class="css-v3da1w-CompactGroupText e1jvndxx8"
      >
        P
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            disabled=""
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-14xjga1-ButtonsContainer ep48xt77"
  >
    <button
      class="css-45wob6-StyledButton ep48xt78"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-155nhcg-StyledButton ep48xt78"
      data-mui-internal-clone-element="true"
      data-testid="save-btn"
      disabled=""
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component > should render correctly in view mode 1`] = `
<div
  class="css-1sdi5u4-RnaEditorExpandedContainer ep48xt70"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-lp1h1l-CompactViewName ep48xt71"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value="MyRna"
  />
  <div
    class="css-8bc8yr-GroupsContainer ep48xt72"
  >
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="sugar"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="base"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Base
      </p>
    </div>
    <div
      class="css-cfpazt-CompactGroupBlockContainer e1jvndxx6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-12ndeqe-CompactGroupConnection e1jvndxx7"
      />
      <div
        class="css-gk2rte-GroupIconContainer e1jvndxx4"
      >
        <svg
          class="css-ne7l56-GroupIcon e1jvndxx5"
          name="phosphate"
        />
      </div>
      <p
        class="css-1aj5yyk-CompactGroupText e1jvndxx8"
      >
        Phosphate
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            disabled=""
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-14xjga1-ButtonsContainer ep48xt77"
  >
    <button
      class="css-45wob6-StyledButton ep48xt78"
      data-testid="duplicate-btn"
      type="button"
    >
      Duplicate and Edit
    </button>
    <button
      class="css-45wob6-StyledButton ep48xt78"
      data-testid="edit-btn"
      type="button"
    >
      Edit
    </button>
  </div>
</div>
`;
